<resources>
    <string name="app_name">Joozdter</string>
    <string name="flightNumberHint">FlightNumber</string>
    <string name="airFieldHint">Airport</string>
    <string name="dateHint">Date</string>
    <string name="nameHint">Pilot Name</string>
    <string name="aircraftHint">PH-EZA (E190)</string>
    <string name="flightNumber">FlightNumber</string>
    <string name="airField">Airport</string>
    <string name="date">Date</string>
    <string name="name">Pilot\'s name</string>
    <string name="aircraft">Aircraft</string>
    <string name="search">Search</string>
    <string name="seacrhFlightsHeader">Search Flights</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close">CLOSE</string>
    <string name="clear">Clear</string>
    <string name="editFlight">Add Flight</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="timeOut">Time Out (Z)</string>
    <string name="timeIn">Time In (Z)</string>
    <string name="namePic">Name PIC</string>
    <string name="namePilot2">Other names</string>
    <string name="otherCrew">Other Crew</string>
    <string name="remarks">Remarks</string>
    <string name="takeOffLandings">Takeoff / Landing</string>
    <string name="simtTime">Simulator Time</string>
    <string name="pilotFlying">Pilot Flying</string>
    <string name="picus">PICus</string>
    <string name="simluator">Simulator</string>
    <string name="pic">PIC</string>
    <string name="save">Save</string>
    <string name="ifrString">IFR</string>
    <string name="dualString">Dual</string>
    <string name="instructorString">Instructor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="autovalue">Auto Values</string>
    <string name="undo">Undo Changes</string>
    <string name="selectedName">Selected Name:</string>
    <string name="changeName">Change Name</string>
    <string name="clearAndClose">Clear and Close</string>
    <string name="takeoff">Takeoff</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="landing">Landing</string>
    <string name="autoland">Autoland</string>
    <string name="dayslashnight">day/night</string>
    <string name="connectingToServer">Verbinden met server...</string>
    <string name="synchronizing">Synchronizing...</string>
    <string name="sendingDataToServer">Rooster naar server versturen...</string>
    <string name="receivingData">gegevens zenden/ontvangen…</string>
    <string name="totalTimes">Total times</string>
    <string name="balanceForward">Balance forward</string>
    <string name="addBalanceForward">Add Balance Forward</string>
    <string name="logbookName">Name of old logbook</string>
    <string name="totalTime">Total time</string>
    <string name="aircraftTime">Aircraft time</string>
    <string name="takeoffDay">Takeoff day</string>
    <string name="takeoffNight">Takeoff night</string>
    <string name="landingDay">Landing Day</string>
    <string name="landingNight">Landing Night</string>
    <string name="nightTime">Night time</string>
    <string name="ifrTime">IFR time</string>
    <string name="picIncludingPicus">PIC (+ PICUS)</string>
    <string name="copilot">Co-pilot</string>
    <string name="paperLogbook">Paper Logbook</string>
    <string name="pickCalendar">Pick a calendar:</string>
    <string name="calendarPicked">Calendar picked:</string>
    <string name="shareName">Deel je naam met je crews</string>
    <string name="preference_file_key">nl.joozd.joozdter.PREFERENCE_FILE_KEY2</string>
    <string name="youCanClose">You can close this screen when you are done</string>
    <string name="showDaysOff">Show Days Off</string>
    <string name="showHotel">Show Hotels</string>
    <string name="showTaxi">Show Taxi / Pickup</string>
    <string name="showFlightDay">Show Flight Day</string>
    <string name="showCheckIn">Show Check In</string>
    <string name="showCheckOut">Show Check Out</string>
    <string name="showFlights">Show Flights</string>
    <string name="showOtherDuties">Show Other Duties</string>
    <string name="showTraining">Show Training</string>
    <string name="showActualSimTime">Show Actual Simulator Time</string>
    <string name="comingSoonMyLogbookApp">Coming Soon: JoozdLog Pilot\'s Logbook app</string>
    <string name="helloNewUser">Hellon new user!</string>
    <string name="howItWorks">This is how it works:</string>
    <string name="makeSelectionsInNextScreen">Just pick a calendar and set your preferences in the next screen!</string>
    <string name="thenJustShare">Then, just share your KLC roster from your favorite PDF reader with this app!</string>
    <string name="youCanCloseWhenDone">You can close this app when you are done with the settings!</string>
    <string name="privacyStatement">This app doesn\'t transmit any data to anybody.</string>
    <string name="addingToCalendar">Agenda bijwerken…</string>
    <string name="hostNotFound">Could not find host. Are you connected to the internet?</string>
    <string name="errorParsingRoster">Unknown Error, might be server problem. Please try again later.</string>
    <string name="errorWrongFile">Server did not recognize this as a KLC roster!</string>
    <string name="serverRefused">Connection problem, please try again later.</string>
    <string name="showStandby">Show  Standby</string>
    <string name="receivedFile">Received File…</string>
    <string name="itSeemsToBeARoster">It seems to be a roster!</string>
    <string name="youDontHaveToWait">(You don\'t have to wait for this)</string>
    <string name="removingOldEvents">Removing old events…</string>
    <string name="addingNewEvents">Adding new events…</string>
    <string name="done">Done!</string>
    <string name="checkMark">✓</string>
    <string name="errorMark">✗</string>

    <string name="eventLayoutPickerPrompt">Pick a layout for entries</string>
    <string-array name="eventLayouts">
        <item>TSACT</item>
        <item>Aerodrome Comp. Trng</item>
        <item>TSACT (Aerodrome Comp. Trng)</item>
    </string-array>
</resources>
