<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PdfParserActivity">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                tools:context=".ui.MainActivity">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/pickCalendar"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shareNameSwitch" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendarPicker"
                    android:layout_width="0dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#90FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/calendarPicked"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calendarPicker" />

            <TextView
                    android:id="@+id/pickedCalendarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

            <Switch
                    android:id="@+id/shareNameSwitch"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/shareName"
                    android:textOff="No"
                    android:textOn="Yes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Switch
                    android:id="@+id/daysOffswitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showDaysOff"
                    app:layout_constraintEnd_toEndOf="@+id/shareNameSwitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Switch
                    android:id="@+id/hotelSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showHotel"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/daysOffswitch" />

            <Switch
                    android:id="@+id/taxiSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showTaxi"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/hotelSwitch" />

            <Switch
                    android:id="@+id/flightDaySwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showFlightDay"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/taxiSwitch" />

            <Switch
                    android:id="@+id/flightsSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showFlights"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/flightDaySwitch" />

            <Switch
                    android:id="@+id/otherSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showOtherDuties"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/flightsSwitch" />

            <Switch
                    android:id="@+id/simBriefingSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showSimBriefing"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/otherSwitch" />

            <Switch
                    android:id="@+id/simActualSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/showActualSimTime"
                    app:layout_constraintEnd_toEndOf="@+id/daysOffswitch"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/simBriefingSwitch" />

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/comingSoonMyLogbookApp"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/simActualSwitch" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>